--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ a.active, a:hover {
     transition: 0.2s;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 780px) {
 
     #hero .hero-section{
     width: 100%;
@@ -128,7 +128,6 @@ a.active, a:hover {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    /* align-items: center; */
     margin-top: -20px;
     display: flex;
     flex-direction: row;
@@ -136,6 +135,7 @@ a.active, a:hover {
 
 .hero-section .featureImage{
     z-index: 100;
+    width: 64%;
 }
 
 
